minio/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minio
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - image: bitnami/minio
          name: minio
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 500Mi
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio
spec:
  ports:
    - name: ui
      port: 9001
      protocol: TCP
      targetPort: 9001
      nodePort: 31500
    - name: api
      port: 9000
      protocol: TCP
      targetPort: 9000
      nodePort: 32000
  selector:
    app: minio
  type: LoadBalancer

# envFrom:
# - configMapRef:
#     name: app-config
# - secretRef:
#     name: secrets
