minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio
  namespace: minio
spec:
  ports:
  - name: ui
    port: 9001
    protocol: TCP
    targetPort: 9001
  - name: api
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
  type: LoadBalancer
